<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10.dp"
        tools:context=".Comment">

        <View
            android:id="@+id/View"
            android:background="@drawable/view_item_bg"
            android:layout_width="70dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/Title"
            android:layout_marginTop="15dp"
            android:text="@string/send_your_comment"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/View"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/ProductName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            android:text="@string/product_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="0dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"/>


        <RadioGroup
            android:id="@+id/RadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/ProductName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/NotSatisfiedRadioBtn"
                android:text="@string/not_satisfied"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/SatisfiedRadioBtn"
                android:text="@string/satisfied"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/VerySatisfiedRadioBtn"
                android:text="@string/very_satisfied"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <EditText
            android:id="@+id/CommentInput"
            android:layout_width="0dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="70dp"
            android:layout_marginTop="3dp"
            android:hint="@string/enter_comment"
            android:background="@drawable/commentinput"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/RadioGroup"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <com.flod.loadingbutton.LoadingButton
            android:id="@+id/ListBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="#2979FF"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:minHeight="35dp"
            android:padding="8dp"
            android:text="@string/List"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/CommentInput"
            app:radius="999dp"
            app:enableShrink="true"
            app:enableRestore="true"
            app:loadingDrawablePosition="Start"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".45" />

        <com.flod.loadingbutton.LoadingButton
            android:id="@+id/SubmitBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/app_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:minHeight="35dp"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/CommentInput"
            app:radius="999dp"
            app:enableShrink="true"
            app:enableRestore="true"
            app:loadingDrawablePosition="Start"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent=".45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>