<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="question"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ui_background"
        tools:context=".ui.home.ChangePassword">





            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/CurrentPasswordText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flex_regular"
                    android:text="@string/current_password"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".95" />

                <EditText
                    android:id="@+id/CurrentPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/searchshopinputbg"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CurrentPasswordText"
                    app:layout_constraintWidth_percent=".95" />



                <TextView
                    android:id="@+id/NewPasswordText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flex_regular"
                    android:text="@string/new_password"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/CurrentPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".95" />

                <EditText
                    android:id="@+id/NewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/searchshopinputbg"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewPasswordText"
                    app:layout_constraintWidth_percent=".95" />

                <TextView
                    android:id="@+id/ConfirmPasswordText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flex_regular"
                    android:text="@string/confirm_password"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewPassword"
                    app:layout_constraintWidth_percent=".95" />

                <EditText
                    android:id="@+id/ConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/searchshopinputbg"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordText"
                    app:layout_constraintWidth_percent=".95" />


                <TextView
                    android:id="@+id/SCodeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flex_regular"
                    android:text="@string/QFatherName"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword"
                    app:layout_constraintWidth_percent=".95" />

                <EditText
                    android:id="@+id/SCodeQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/searchshopinputbg"
                    android:maxLines="1"
                    android:text="@{question}"
                    android:padding="10dp"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SCodeText"
                    app:layout_constraintWidth_percent=".95" />




                <TextView
                    android:id="@+id/SCodeAnsText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flex_regular"
                    android:text="@string/answer"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SCodeQuestion"
                    app:layout_constraintWidth_percent=".95" />

                <EditText
                    android:id="@+id/SCodeAns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/searchshopinputbg"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SCodeAnsText"
                    app:layout_constraintWidth_percent=".95" />


                <com.flod.loadingbutton.LoadingButton
                    android:id="@+id/ChangePasswordBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/app_primary"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:minHeight="45dp"
                    android:maxLines="1"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/SCodeAns"
                    android:textSize="12sp"
                    app:radius="999dp"
                    app:enableShrink="true"
                    app:enableRestore="true"
                    app:loadingDrawablePosition="Start"
                    app:layout_constraintEnd_toEndOf="@+id/SCodeAns"
                    app:layout_constraintWidth_percent=".45" />



            </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>